--- a/config/database.yml
+++ b/config/database.yml
@@ -6,20 +6,23 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  #timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: ranked_choice_survey_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: ranked_choice_survey_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: ranked_choice_survey_production
+  username: ranked_choice_survey
+  password: <%= ENV['RANKED_CHOICE_SURVEY_BACKEND_DATABASE_PASSWORD'] %>
